# axis-codegen-bridge-rs

./: AXBI_PARSE_IS_PROMPT.md  CLAUDE.md  Cargo.toml  FOREIGN_FN_FN_REF_IS_PROMPT.md  IS_BRIDGE_AXVERITY_BLOCKING_FNS_v0.1.md  IS_BRIDGE_BYTES_TO_TEXT_v0.1.md  IS_BRIDGE_STRICT_RESULT_CONVENTION_v0.1.md  IS_BRIDGE_TCP_SOCKET_PRIMITIVES_v0.1.md  IS_CLEANUP_04_STACK_v0.1.md  IS_REMOVE_RESULT_TYPES_FINAL_v0.1.md  IS_REMOVE_RESULT_TYPES_v0.1.md  M1_VALUE_STR_ARC_IMPLEMENTATION_V1_REPORT.md  MIGRATION.md  MULTI_EXPORT_MIGRATION.md  README.md  REGISTRY_AUDIT.md  XBUNDLE_LINK_DEDUP_IS_PROMPT.md  audit-report.md  build.rs
.claude/: settings.json  settings.local.json
core_ir_spec/: axis-core-ir-0.5.md  axis_core_ir_0_3.capnp  axis_core_ir_0_4.capnp  axis_core_ir_0_5.capnp
examples/: gen_ep_test.rs
registry/: axis-codegen-bridge.axreg  axis-mem-raw.axreg  axis.axreg
specs/: BRIDGE_ENTRY_POINTS_V1.md  BRIDGE_XBUNDLE_LINK_V1.md  H1_BRIDGE_ASYNC_V1_PLAN.md
src/: executor.rs  lib.rs  main.rs
tests/: async_build_link_test.rs  async_channels_static_test.rs  async_roundtrip_test.rs  bytes_io_test.rs  cli_build_05_test.rs  cli_build_test.rs  fnref_composite_test.rs  foreign_fn_fnref_test.rs  hash_primitive_test.rs  integration.rs  link_test.rs  loom_arena.rs  mem_battle_test.rs  mpsc_wake_battle_test.rs  rawmem_battle_test.rs  reclog_phase3_binding_recovery_test.rs  reclog_tsmark_wiring_audit_test.rs  semantic_loop_event_demo_test.rs  slablock_phase_a_harness_test.rs  test_link_main.coreir  unified_wait_test.rs  unit_complex.rs  unit_runtime.rs  value_coercion_test.rs  (+1 more)
(+75 files in other folders)
