[package]
name = "axis-codegen-bridge"
version = "0.1.0"
edition = "2021"

[lib]
name = "axis_codegen_bridge"
path = "src/lib.rs"

[[bin]]
name = "axis-codegen-bridge"
path = "src/main.rs"

[dependencies]
capnp = "0.19"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
sha2 = "0.10"
rust_decimal = "1"
libc = "0.2"

[build-dependencies]
capnpc = "0.19"
cc = "1"

[dev-dependencies]
tempfile = "3.0"

# loom is only pulled in / compiled under `--cfg loom` (never in normal builds
# or the standard test run). Used by tests/loom_arena.rs to model the Hot Mem
# arena pin/fence/publish/scan/free protocol exhaustively under the C11 memory
# model. Run: RUSTFLAGS="--cfg loom" cargo test --test loom_arena --release
[target.'cfg(loom)'.dependencies]
loom = "0.7"
